--- a/src/Components/Foldercomponent/index.scss
+++ b/src/Components/Foldercomponent/index.scss
@@ -1,5 +1,13 @@
 @import '../../../sass/variables';
 
+.directory_folder {
+    height: 85%;
+    text-align: center;
+        @at-root #{&}__image {
+            margin-top: 25%;
+        }
+}
+
 .grid_content {
     text-align: center;
         @at-root #{&}__paper {
